# db-rust-action-test

./: .env  Cargo.toml  README.md
.github/workflows/: action-test.yaml
migrations/: 20211130021727_student.sql
src/: lib.rs
