[package]
name = "db-rust-action-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "chrono", "macros" ] }
rustls = "0.20"

tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net", "io-util"] }
dotenv = "0.15"
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"
